--- a/src/styles/inputs.css
+++ b/src/styles/inputs.css
@@ -1,27 +1,55 @@
-.inputt {
+.form {
+    margin: 0 auto;
+    max-width: 500px;
+    border: 1px solid var(--lightest-gray);;
+    border-radius: 8px;
+    padding: 30px;
+    background: white;
+}
+.form-input {
     width: 100%;
+    box-sizing: border-box;
     padding: 15px 20px;
     font-size: 14px;
-    margin-bottom: 24px;
-    border: 1px solid #e6e8ef;
+    border: 1px solid var(--lightest-gray);;
     border-radius: 8px;
     background-color: transparent;
-    transition: border-color 200ms ease;
-    color: #515a61;
+    transition: all 200ms ease;
+    color: var(--gray);
     outline: none;
 }
-.inputt::placeholder {
-    color: #9dafbd;
+.form-input::placeholder {
+    color: var(--lighter-gray);
 }
-.inputt:hover {
-    border-color: #3cf;
+.form-input:hover {
+    border-color: var(--blue);
 }
-.inputt:focus {
-    border-color: #3cf;
-    background-color: rgb(195, 240, 255);
-    color: #515a61;
+.form-input:focus {
+    border-color: var(--blue);
+    color: var(--gray);
 }
 
+.form-group {
+    margin-top: 24px;
+}
 .form-group p {
     margin-bottom: 0.5em;
+}
+
+.btn {
+    padding: 9px 20px 10px;
+    font-family: FranklinGothicBook;
+    font-size: 18px;
+    cursor: pointer;
+}
+
+.btn.btn-primary{
+    border: 0;
+    border-radius: 8px;
+    color: white;
+    background-color: var(--blue);
+}
+
+.login-container{
+    margin-top: 150px;
 }
