--- a/src/styles/inputs.css
+++ b/src/styles/inputs.css
@@ -53,3 +53,47 @@
 .login-container{
     margin-top: 125px;
 }
+
+@media screen and (max-width:768px){
+    .form {
+        max-width: 400px;
+    }
+    .form-input {
+        padding: 15px 20px;
+        font-size: 12px;
+        outline: none;
+    }
+    .btn {
+        font-size: 16px;
+    }
+}
+
+@media screen and (max-width:767px){
+    .form .btn.btn-primary{
+        margin-top: 30px;
+        width: 100%;
+    }
+    .signup-container .form-group:first-of-type {
+        margin-top: 24px;
+    }
+    .signup-container .form-group {
+        margin-top: 0px;
+    }
+    .signup-container .form-input {
+        margin-bottom: 24px;
+    }
+}
+
+
+@media screen and (max-width:575px){
+    .form {
+        max-width: 300px;
+    }
+}
+
+@media screen and (max-width:375px){
+    .form {
+        max-width: 200px;
+    }
+}
+  
