--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,7 @@ a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,c
 
 
 .nav {
+  background-color: white;
   border: 1px solid var(--lightest-gray);
   /* padding: 15px 0px; */
   border-radius: 8px;
@@ -64,7 +65,7 @@ a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,c
 .nav .nav-item{
   padding: 15px;
   border-bottom: 1px solid var(--lightest-gray);
-  color: var(--blue);
+  /* color: var(--blue); */
 }
 .nav .nav-item:first-of-type{
   padding-top: 30px;
@@ -79,11 +80,11 @@ a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,c
   border-bottom-right-radius: 8px;
 }
 .nav .nav-item:hover, .nav .nav-item:active{
- background: var(--blue);
- color: white;
+ /* background: var(--blue); */
+ /* color: white; */
 }
 
 .nav .nav-item .nav-link{
-  color: inherit;
+  /* color: inherit; */
   text-decoration: none;
 }
