Added dashboard page

--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -29,7 +29,7 @@
 }
 
 .navbar .nav-links .nav-item.nav-brand {
-    padding: 15px 20px 0;
+    padding: 15px 20px;
 }
 .navbar .nav-brand a{
     font-family: FranklinGothicDemi;
