--- a/src/styles/inputs.css
+++ b/src/styles/inputs.css
@@ -54,6 +54,14 @@
     margin-top: 125px;
 }
 
+textarea.form-input{
+    /* font-size: 16px; */
+    font-family: FranklinGothicBook;
+    margin: 10px auto;
+    width: 100%;
+    resize: vertical;
+}
+
 @media screen and (max-width:768px){
     .form {
         max-width: 400px;
